Fixed error with heat-application cost.

--- a/help.html
+++ b/help.html
@@ -17,7 +17,7 @@
 
 		<h1>Pricing Calculator Readme</h1>
 
-		<p>This file contains explanations of how the program works. Last edited on Nov. 8, 2017.</p>
+		<p>This file contains explanations of how the program works. Last edited on June 13, 2018.</p>
 
 		<h2>Garment &amp; Quantity</h2>
 
