--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
 					<select id="heatPresets1" class="leftSelect widthOne">
 						<option value="0" selected="selected">1st App. Presets</option>
 						<option value="4">Name &amp; Number</option>
-						<option value="2">2" Name</option>
+						<option value="2">2" Name or 8" Number</option>
+						<option value="1.4">6" Number</option>
+						<option value="0.8">4" Number</option>
 						<option value="0.6">1" Name</option>
-						<option value="2">8" Number</option>
-						<option value="1.4">6" number</option>
-						<option value="0.8">4" number</option>
-						<option value="8.4">Name &amp; Number (2-color)</option>
-						<option value="3.8">2" Name (2-color)</option>
+						<option value="1.2">Team Name (3 x 12")</option>
+						<option value="7.8">Name &amp; Number (2-color)</option>
+						<option value="3.4">2" Name (2-color)</option>
 						<option value="4.4">8" Number (2-color)</option>
-						<option value="3.4">6" Number (2-color)</option>
-						<option value="2.4">4" Number (2-color)</option>
+						<option value="3.2">6" Number (2-color)</option>
+						<option value="2.0">4" Number (2-color)</option>
 					</select><!--
 					--><input id="height1" class='widthHA' placeholder="Height"><!--
 					--><input id="width1" class='widthHA' placeholder="Width"><!--
@@ -177,16 +177,16 @@
 					<select id="heatPresets2" class="leftSelect widthOne">
 						<option value="0" selected="selected">2nd App. Presets</option>
 						<option value="4">Name &amp; Number</option>
-						<option value="2">2" Name</option>
+						<option value="2">2" Name or 8" Number</option>
+						<option value="1.4">6" Number</option>
+						<option value="0.8">4" Number</option>
 						<option value="0.6">1" Name</option>
-						<option value="2">8" Number</option>
-						<option value="1.4">6" number</option>
-						<option value="0.8">4" number</option>
-						<option value="8.4">Name &amp; Number (2-color)</option>
-						<option value="3.8">2" Name (2-color)</option>
+						<option value="1.2">Team Name (3 x 12")</option>
+						<option value="7.8">Name &amp; Number (2-color)</option>
+						<option value="3.4">2" Name (2-color)</option>
 						<option value="4.4">8" Number (2-color)</option>
-						<option value="3.4">6" Number (2-color)</option>
-						<option value="2.4">4" Number (2-color)</option>
+						<option value="3.2">6" Number (2-color)</option>
+						<option value="2.0">4" Number (2-color)</option>
 					</select><!--
 					--><input id="height2" class='widthHA' placeholder="Height"><!--
 					--><input id="width2" class='widthHA' placeholder="Width"><!--
