--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 					
 						<option value="3.00" selected="selected">Gildan 5000 (basic t-shirts)</option>
 						<option value="1.00">Items Supplied by Customer</option>
-						<option value="3.80">Gildan 5000L (ladies t-shirts)</option>
-						<option value="5.60">Gildan 5400 (long-sleeve t-shirts)</option>
+						<option value="4.00">Gildan 5000L (ladies t-shirts)</option>
+						<option value="5.80">Gildan 5400 (long-sleeve t-shirts)</option>
 						<option value="3.20">Gildan 8000 (blended t-shirts)</option>
 						<option value="3.20">Gildan 2000 (cotton t-shirts)</option>
-						<option value="7.20">Gildan 2300 (pocket t-shirts)</option>
+						<option value="7.60">Gildan 2300 (pocket t-shirts)</option>
 						<option value="6.20">Gildan 2400 (long-sleeve t-shirts)</option>
-						<option value="3.20">Jerzees 29 (50/50 t-shirts)</option>
-						<option value="7.00">Jerzees 29P (pocket t-shirts)</option>
+						<option value="3.20">Jerzees 29M (50/50 t-shirts)</option>
+						<option value="7.20">Jerzees 29MP (pocket t-shirts)</option>
 						<option value="3.60">Anvil 980 (ringspun t-shirts)</option>
 						<option value="4.60">Hanes 5180 (beefy tees)</option>
 						
@@ -44,13 +44,13 @@
 						<option value="11.00">UltraClub 8540 (blended polos)</option>
 						<option value="10.20">Port Authority K540 (performance polos)</option>
 
-						<option value="5.60">Gildan 42000 (polyester t-shirts)</option>
+						<option value="5.80">Gildan 42000 (polyester t-shirts)</option>
 						<option value="4.60">Augusta 790 (polyester t-shirts)</option>
 						<option value="8.40">Gildan 18000 (crew-neck sweatshirts)</option>
 						<option value="12.60">Gildan 18500 (pullover hoodies)</option>
 						<option value="15.40">Gildan 18600 (full-zip hoodies)</option>
 						<option value="9.40">Gildan 12000 (crew-neck sweatshirts)</option>
-						<option value="14.00">Gildan 12500 (pullover hoodies)</option>
+						<option value="14.40">Gildan 12500 (pullover hoodies)</option>
 						<option value="21.00">Gildan 12600 (full-zip hoodies)</option>
 
 					</select><!--
