added two more quote amounts

--- a/index.html
+++ b/index.html
@@ -261,6 +261,36 @@
 				</select>
 
 				<hr>
+				<p id="qty5" class="leftP">36 or more</p>
+				<p class="rightP">$<span id="cost5">0.00</span></p>
+				<select id="adj5" class="adjust">
+					<option value="-0.40">- 0.40</option>
+					<option value="-0.30">- 0.30</option>
+					<option value="-0.20">- 0.20</option>
+					<option value="-0.10">- 0.10</option>
+					<option value="0" selected="selected"></option>
+					<option value="0.10">+ 0.10</option>
+					<option value="0.20">+ 0.20</option>
+					<option value="0.30">+ 0.30</option>
+					<option value="0.40">+ 0.40</option>
+				</select>
+
+				<hr>
+				<p id="qty6" class="leftP">48 or more</p>
+				<p class="rightP">$<span id="cost6">0.00</span></p>
+				<select id="adj6" class="adjust">
+					<option value="-0.40">- 0.40</option>
+					<option value="-0.30">- 0.30</option>
+					<option value="-0.20">- 0.20</option>
+					<option value="-0.10">- 0.10</option>
+					<option value="0" selected="selected"></option>
+					<option value="0.10">+ 0.10</option>
+					<option value="0.20">+ 0.20</option>
+					<option value="0.30">+ 0.30</option>
+					<option value="0.40">+ 0.40</option>
+				</select>
+
+				<hr>
 				<p class="leftP">Total Cost w/tax <span class="small">(for lowest qty.)</span></p>
 				<p class="rightP">$<span id="total">0.00</span></p>
 
