updated garments / prices

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 					
 						<option value="3.00" selected="selected">Gildan 5000 (basic t-shirts)</option>
 						<option value="1.00">Items Supplied by Customer</option>
-						<option value="4.00">Gildan 5000L (ladies t-shirts)</option>
 						<option value="5.80">Gildan 5400 (long-sleeve t-shirts)</option>
 						<option value="3.20">Gildan 8000 (blended t-shirts)</option>
 						<option value="3.20">Gildan 2000 (cotton t-shirts)</option>
 						<option value="7.60">Gildan 2300 (pocket t-shirts)</option>
 						<option value="6.20">Gildan 2400 (long-sleeve t-shirts)</option>
 						<option value="3.20">Jerzees 29M (50/50 t-shirts)</option>
-						<option value="7.20">Jerzees 29MP (pocket t-shirts)</option>
-						<option value="3.60">Anvil 980 (ringspun t-shirts)</option>
+						<option value="7.20">Jerzees 29P (pocket t-shirts)</option>
+						<option value="7.20">Jerzees 29L (long-sleeve t-shirts)</option>
 						<option value="4.60">Hanes 5180 (beefy tees)</option>
 						
 						<option value="5.20">UltraClub 8101 (basic caps)</option>
 						<option value="10.20">Richardson 585 (flexfit caps)</option>
+						<option value="4.00">UltraClub 8130/8131 (knit beanies)</option>
 						<option value="11.00">UltraClub 8540 (blended polos)</option>
 						<option value="10.20">Port Authority K540 (performance polos)</option>
 
