--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<option value="12">12 screens</option>
 					</select><!--
 
-					--><select id="colors1st" class="leftSelect widthOne">
+					--><select id="colors1" class="leftSelect widthOne">
 						<option value="0" selected="selected">1st Imprint</option>
 						<option value="1">1-color</option>
 						<option value="2">2-colors</option>
@@ -111,7 +111,7 @@
 						<option value="6">6-colors</option>
 						</select><!--
 
-					--><select id="colors2nd" class="leftSelect widthOne">
+					--><select id="colors2" class="leftSelect widthOne">
 						<option value="0" selected="selected">2nd Imprint</option>
 						<option value="1">1-color</option>
 						<option value="2">2-colors</option>
@@ -123,7 +123,7 @@
 
 					--><input id="exactScr" placeholder="Exact Scr."><!--
 
-					--><select id="colors3rd" class="leftSelect widthOne">
+					--><select id="colors3" class="leftSelect widthOne">
 						<option value="0" selected="selected">3rd Imprint</option>
 						<option value="1">1-color</option>
 						<option value="2">2-colors</option>
@@ -133,7 +133,7 @@
 						<option value="6">6-colors</option>
 						</select><!--
 
-					--><select id="colors4th" class="leftSelect widthOne">
+					--><select id="colors4" class="leftSelect widthOne">
 						<option value="0" selected="selected">4th Imprint</option>
 						<option value="1">1-color</option>
 						<option value="2">2-colors</option>
