added adjustments array and more functionality

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <option value="21.20">Gildan 12600 (full-zip hoodies)</option> </select
           ><!--
 					--><input id="exactGar" class="minusCheckbox" placeholder="Garment Cost" /><!--
-					--><input type="checkbox" id="markup" class="checkbox" checked /><!--
+					--><input type="checkbox" id="markup" class="checkbox" title="Add Markup" checked /><!--
 
-					--><select id="quantity" class="leftSelect widthTwo">
+					--><select id="quantity" class="leftSelect widthOne">
             <option value="1">1 or more</option>
             <option value="3">3 or more</option>
             <option value="6">6 or more</option>
@@ -65,9 +65,14 @@
             <option value="80">80 or more</option>
             <option value="100">100 or more</option>
             <option value="150">150 or more</option>
-            <option value="200">200 or more</option> </select
+            <option value="200">200 or more</option>
+            <option value="300">300 or more</option>
+            <option value="400">400 or more</option>
+            <option value="600">600 or more</option>
+            <option value="800">800 or more</option> </select
           ><!--
-					--><input id="exactQty" placeholder="Exact Quantity" />
+					--><input id="exactQty" placeholder="Exact Quantity" /><!--
+					--><input id="additional" placeholder="Additional Cost" />
         </div>
 
         <h1 class="marginTop">Screen Printing</h1>
@@ -186,9 +191,9 @@
 
       <div class="row rightSize">
         <hr />
-        <p id="qty1" class="leftP">6 or more</p>
+        <p id="qty1" class="leftP">12 or more</p>
         <p class="rightP">$<span id="cost1">0.00</span></p>
-        <select id="adj1" class="adjust">
+        <select name="12" id="adj1" class="adjust">
           <option value="-0.40">- 0.40</option>
           <option value="-0.30">- 0.30</option>
           <option value="-0.20">- 0.20</option>
@@ -201,9 +206,9 @@
         </select>
 
         <hr />
-        <p id="qty2" class="leftP">12 or more</p>
+        <p id="qty2" class="leftP">18 or more</p>
         <p class="rightP">$<span id="cost2">0.00</span></p>
-        <select id="adj2" class="adjust">
+        <select name="18" id="adj2" class="adjust">
           <option value="-0.40">- 0.40</option>
           <option value="-0.30">- 0.30</option>
           <option value="-0.20">- 0.20</option>
@@ -216,9 +221,9 @@
         </select>
 
         <hr />
-        <p id="qty3" class="leftP">18 or more</p>
+        <p id="qty3" class="leftP">24 or more</p>
         <p class="rightP">$<span id="cost3">0.00</span></p>
-        <select id="adj3" class="adjust">
+        <select name="24" id="adj3" class="adjust">
           <option value="-0.40">- 0.40</option>
           <option value="-0.30">- 0.30</option>
           <option value="-0.20">- 0.20</option>
@@ -231,9 +236,9 @@
         </select>
 
         <hr />
-        <p id="qty4" class="leftP">24 or more</p>
+        <p id="qty4" class="leftP">36 or more</p>
         <p class="rightP">$<span id="cost4">0.00</span></p>
-        <select id="adj4" class="adjust">
+        <select name="36" id="adj4" class="adjust">
           <option value="-0.40">- 0.40</option>
           <option value="-0.30">- 0.30</option>
           <option value="-0.20">- 0.20</option>
@@ -246,9 +251,9 @@
         </select>
 
         <hr />
-        <p id="qty5" class="leftP">36 or more</p>
+        <p id="qty5" class="leftP">48 or more</p>
         <p class="rightP">$<span id="cost5">0.00</span></p>
-        <select id="adj5" class="adjust">
+        <select name="48" id="adj5" class="adjust">
           <option value="-0.40">- 0.40</option>
           <option value="-0.30">- 0.30</option>
           <option value="-0.20">- 0.20</option>
@@ -261,9 +266,9 @@
         </select>
 
         <hr />
-        <p id="qty6" class="leftP">48 or more</p>
+        <p id="qty6" class="leftP">60 or more</p>
         <p class="rightP">$<span id="cost6">0.00</span></p>
-        <select id="adj6" class="adjust">
+        <select name="60" id="adj6" class="adjust">
           <option value="-0.40">- 0.40</option>
           <option value="-0.30">- 0.30</option>
           <option value="-0.20">- 0.20</option>
