added embroidery costs and fixed adjustments

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <option value="21.20">Gildan 12600 (full-zip hoodies)</option> </select
           ><!--
 					--><input id="exactGar" class="minusCheckbox" placeholder="Garment Cost" /><!--
-					--><input type="checkbox" id="markup" class="checkbox" title="Add Markup" checked /><!--
+					--><input type="checkbox" id="markup" class="checkbox" title="Check to add markup." checked /><!--
 
 					--><select id="quantity" class="leftSelect widthOne">
             <option value="1">1 or more</option>
