added markup checkbox for decals

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
           ><!--
 					--><input id="height1" class="widthHA" placeholder="Height" /><!--
 					--><input id="width1" class="widthHA" placeholder="Width" /><!--
-					--><input id="decal1" class="widthHA" placeholder="Decal" />
+					--><input id="decal1" class="widthHA" placeholder="Decal" /><!--
+          --><input type="checkbox" id="decalMark1" class="checkbox" title="Check to add markup." checked />
 
           <select id="heatPresets2" class="leftSelect widthOne">
             <option value="0" selected="selected">2nd App. Presets</option>
@@ -183,7 +184,8 @@
           ><!--
 					--><input id="height2" class="widthHA" placeholder="Height" /><!--
 					--><input id="width2" class="widthHA" placeholder="Width" /><!--
-					--><input id="decal2" class="widthHA" placeholder="Decal" />
+					--><input id="decal2" class="widthHA" placeholder="Decal" /><!--
+          --><input type="checkbox" id="decalMark2" class="checkbox" title="Check to add markup." checked />
         </div>
       </div>
 
