updated prices (oct 2019)

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <option value="7.20" data-xxl="1.40">Jerzees 29L (long-sleeve t-shirts)</option>
             <option value="4.60" data-xxl="1.80">Hanes 5180 (beefy tees)</option>
 
-            <option value="5.20" data-xxl="0">UltraClub 8101 (basic caps)</option>
-            <option value="10.60" data-xxl="0">Richardson 585 (flexfit caps)</option>
+            <option value="6.00" data-xxl="0">UltraClub 8101 (basic caps)</option>
+            <option value="11.00" data-xxl="0">Richardson 585 (flexfit caps)</option>
             <option value="4.00" data-xxl="0">UltraClub 8130/8131 (knit beanies)</option>
-            <option value="11.00" data-xxl="1.00">UltraClub 8540 (blended polos)</option>
+            <option value="11.60" data-xxl="1.00">UltraClub 8540 (blended polos)</option>
             <option value="10.20" data-xxl="1.00">Port Authority K540 (performance polos)</option>
 
             <option value="6.20" data-xxl="1.00">Gildan 42000 (polyester t-shirts)</option>
-            <option value="4.60" data-xxl="1.00">Augusta 790 (polyester t-shirts)</option>
+            <option value="4.60" data-xxl="1.00">Team 365 TT11 (polyester t-shirts)</option>
             <option value="8.80" data-xxl="2.00">Gildan 18000 (crew-neck sweatshirts)</option>
             <option value="13.20" data-xxl="4.00">Gildan 18500 (pullover hoodies)</option>
             <option value="15.60" data-xxl="7.40">Gildan 18600 (full-zip hoodies)</option>
