added styles for printing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <div class="screen-hide">
+      <img src="GrimesLogo.svg" alt="Grimes Logo" />
+      <p>: PRICE QUOTE</p>
+      <aside id="todays-date" class="quote-date"></aside>
+    </div>
     <div class="wrapper">
       <div class="leftSize">
         <h1>Garment &amp; Quantity</h1>
