added print button

--- a/index.html
+++ b/index.html
@@ -322,6 +322,8 @@
       </div>
     </div>
 
+    <button onclick="window.print()" id="print-button">Print</button>
+
     <script src="script.js"></script>
   </body>
 </html>
