--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     <div id="copy-modal">
       <div class="copy-modal__container">
         <font size="2">
-          <p id="copy-modal__paragraph"></p>
+          <p id="copy-modal__paragraph" onclick="selectText('copy-modal__paragraph')"></p>
         </font>
         <button onclick="closeModal()" id="copy-close">X</button>
       </div>
