final tweaks to copy button

--- a/help.html
+++ b/help.html
@@ -119,6 +119,12 @@
             The R key will reload the page so you can start a new price quote.
           </li>
           <li>
+            The Copy button in the upper left corner is useful for emailing quotes to a customer. Make sure that the
+            rows you want included are selected by clicking on "XX or more". The rows with the blue highlight will be
+            included when you click Copy. Then you can paste into Gmail. Consider adding more detail to the second line
+            about where the individual prints go.
+          </li>
+          <li>
             If you want to make changes to the prices, you'll need to edit the index.html file (see Garment &amp;
             Quantity section for more details). This can be done with Notepad if needed, but it's much easier to use a
             code editor like VS Code, Adobe Dreamweaver, or Notepad++. VS Code and Notepad++ are available for free.
