updated blank garment prices (Oct 2020)

--- a/index.html
+++ b/index.html
@@ -26,32 +26,32 @@
 							Example: value="(new number here)"
 							-->
 
-            <option value="3.20" data-xxl="2.00" selected="selected">Gildan 5000 (basic t-shirts)</option>
+            <option value="3.00" data-xxl="2.00" selected="selected">Gildan 5000 (basic t-shirts)</option>
             <option value="1.00" data-xxl="0">Items Supplied by Customer</option>
-            <option value="6.20" data-xxl="1.20">Gildan 5400 (long-sleeve t-shirts)</option>
-            <option value="3.60" data-xxl="2.20">Gildan 8000 (blended t-shirts)</option>
-            <option value="3.20" data-xxl="2.00">Gildan 2000 (cotton t-shirts)</option>
+            <option value="6.20" data-xxl="1.40">Gildan 5400 (long-sleeve t-shirts)</option>
+            <option value="3.40" data-xxl="2.20">Gildan 8000 (blended t-shirts)</option>
+            <option value="3.80" data-xxl="1.80">Gildan 2000 (cotton t-shirts)</option>
             <option value="7.20" data-xxl="2.00">Gildan 2300 (pocket t-shirts)</option>
-            <option value="6.60" data-xxl="2.40">Gildan 2400 (long-sleeve t-shirts)</option>
-            <option value="3.60" data-xxl="2.20">Jerzees 29M (50/50 t-shirts)</option>
-            <option value="6.80" data-xxl="1.80">Jerzees 29P (pocket t-shirts)</option>
-            <option value="6.20" data-xxl="1.20">Jerzees 29L (long-sleeve t-shirts)</option>
+            <option value="6.40" data-xxl="2.40">Gildan 2400 (long-sleeve t-shirts)</option>
+            <option value="3.60" data-xxl="2.40">Jerzees 29M (50/50 t-shirts)</option>
+            <option value="7.00" data-xxl="1.80">Jerzees 29P (pocket t-shirts)</option>
+            <option value="6.40" data-xxl="1.40">Jerzees 29L (long-sleeve t-shirts)</option>
             <option value="4.80" data-xxl="1.60">Hanes 5180 (beefy tees)</option>
 
-            <option value="6.00" data-xxl="0">UltraClub 8101 (basic caps)</option>
+            <option value="4.00" data-xxl="0">Port & Company CP80 (basic caps)</option>
             <option value="11.20" data-xxl="0">Richardson 585 (flexfit caps)</option>
-            <option value="4.00" data-xxl="0">UltraClub 8130/8131 (knit beanies)</option>
+            <option value="4.00" data-xxl="0">Yupoong 1501/1500 (knit beanies)</option>
             <option value="11.60" data-xxl="1.00">UltraClub 8540 (blended polos)</option>
             <option value="10.20" data-xxl="1.00">Port Authority K540 (performance polos)</option>
+            <option value="7.40" data-xxl="2.20">Gildan 8800 (blended polos)</option>
 
-            <option value="6.00" data-xxl="0.80">Gildan 42000 (polyester t-shirts)</option>
             <option value="4.60" data-xxl="1.00">Team 365 TT11 (polyester t-shirts)</option>
-            <option value="9.20" data-xxl="1.80">Gildan 18000 (crew-neck sweatshirts)</option>
-            <option value="13.60" data-xxl="3.60">Gildan 18500 (pullover hoodies)</option>
-            <option value="15.60" data-xxl="3.40">Gildan 18600 (full-zip hoodies)</option>
-            <option value="10.00" data-xxl="4.00">Gildan 12000 (crew-neck sweatshirts)</option>
+            <option value="9.40" data-xxl="1.80">Gildan 18000 (crew-neck sweatshirts)</option>
+            <option value="14.00" data-xxl="3.00">Gildan 18500 (pullover hoodies)</option>
+            <option value="16.20" data-xxl="3.40">Gildan 18600 (full-zip hoodies)</option>
+            <option value="10.20" data-xxl="4.00">Gildan 12000 (crew-neck sweatshirts)</option>
             <option value="15.80" data-xxl="6.00">Gildan 12500 (pullover hoodies)</option>
-            <option value="21.20" data-xxl="3.00">Gildan 12600 (full-zip hoodies)</option> </select
+            <option value="21.40" data-xxl="3.00">Gildan 12600 (full-zip hoodies)</option> </select
           ><!--
 					--><input id="exactGar" class="minusCheckbox" placeholder="Garment Cost" /><!--
 					--><input type="checkbox" id="markup" class="checkbox" title="Check to add markup." checked /><!--
